[Lesson3] Rendering cards dynamically; Added alert text feature, error handling; Input component refactor; Importing global variables properly; Added error colors variables, Error component isVisible prop to avoid ui bouncing

--- a/src/shared/ui/error/error.module.scss
+++ b/src/shared/ui/error/error.module.scss
@@ -1,16 +1,20 @@
 @use '@shared/styles/mixins.scss' as *;
 
 .error {
-  max-width: 500px;
+  min-height: 40px;
   padding: 16px;
   margin: 16px auto;
   font-size: var(--font-size-md);
   font-weight: 700;
-  color: #942531;
+  color: var(--color-error-500);
   word-wrap: break-word;
-  background-color: #f8d7da;
+  background-color: var(--color-error-100);
   border-radius: 16px;
   @include flex-center(column, 16px);
+
+  &.hidden {
+    visibility: hidden;
+  }
 
   .error-message {
     flex-grow: 1;
